@@ -118,6 +118,7 @@ Version 1.11.6+dev:
    * Allow numerical values for SideWML "controller" attribute.
    * Allow WML menu items to use hotkeys alongside/instead of the menu.
    * Really added sighted events for ambushing units.
+   * [scroll] now takes an optional side filter.
  * Units:
    * Gave the Death Knight proper skeletal resistances, as well as submerge.
  * User interface:
